syntax = "proto3";
option go_package = "/pb";
package pb;
//失败反馈
message ErrorResp {
	int32 errorCode = 1;
	string errorStr = 2;
}
//服务器信息
message ServerInfo {
	string iP = 1;
	int32 port = 2;
	string serverUrl = 3;
}
//时间信息
message TimeInfo {
	int64 timestamp = 1;
	int64 totalMS = 2;
	int64 remainMS = 3;
}
//属性信息
message PropInfo {
	int64 propId = 1; 		//属性配置ID
	int64 propValue = 2;	//属性值
	int32 isPercent = 3;	//是否百分比 1是 0否
}
//用户信息-基础信息
message UserBaseInfo {
	int32 gender = 1;		//性别
	int32 headId = 2;		//头像ID
	int32 headFrame = 3;	//头像框ID
	string nick = 4;		//昵称
	string headUrl = 5;		//头像链接
}
//用户信息-钱包信息
message WalletInfo {
	int64 diamond = 1;		//钻石|元宝
	int64 gold = 2;			//金币|铜钱
	int64 coin = 3;			//积分
	int64 roomcard = 4;		//房卡|体力
	int64 exp = 5;			//角色升级经验
	int64 grade = 6;		//角色等级
	int64 avatarId = 7;		//皮肤
	int64 safeBox = 8;		//保险箱
}
//用户信息
message UserInfo {
	int64 userId = 1;
	UserBaseInfo baseData = 2;		//基础信息
	WalletInfo walletData = 3;		//钱包
	repeated PropInfo propList = 4;	//属性
}
// 模块信息
message ModInfo {
	int32 modId = 1;	//模块ID
	int32 state = 2;	//0:未开启  1:已开启  2:已领取
}
//物品信息
message ItemInfo {
	int64 id = 1;      
	int64 uid = 2;       //所属玩家
	int64 itemType = 3;  //物品类型
	int64 count = 4;     //数量
}
//装备信息
message EquipInfo {
	int64 id = 1;
	int64 cfgId = 2;
	int32 grade = 3;
	int32 slotId = 4;
	repeated PropInfo propList = 5;
}
//价格信息
message PriceInfo {
	int32 priceType = 1;	//消耗币种
	int64 priceValue = 2;	//消耗数额
}
//卡信息
message CardInfo {
	int64 id = 1;
	int64 uid = 2;
	int64 cardId = 3;
	int32 tbType = 4;
	int32 star = 5;
	int32 quality = 6;
	int32 level = 7;
	int32 grade = 8;
	int32 lineup = 9;
	int32 npos = 10;
	repeated PropInfo propList = 11;
}
//养成位信息
message CultivateInfo {
	int64 id = 1;
	int64 uid = 2;		//所属Uid
	int32 tbType = 3;	//阵类型，和Card表的TbType对应起来
	int32 npos = 4;		//阵位
	int32 star = 5;		//星级
	int32 quality = 6;	//品级
	int32 level = 7;	//阶级
	int32 grade = 8;	//等级
	int64 heroId = 9;	//上阵Card的Id, 为0时表示该阵位空闲
	repeated PropInfo propList = 10;	//属性
}
//战斗队伍
message FightTeam {
	int64 teamId = 1;
	int64 uid = 2;
	repeated CardInfo fighterList = 3;
	repeated CardInfo petList = 4;
	repeated CardInfo jingGuaiList = 5;
}
// 物品推送
message ItemInfoPush {
	ItemInfo data = 1;
}
// 每日零点推送
message DailyZeroPush {
	int64 timestamp = 1;
}
// 模块列表
message ModListReq {
}
message ModListResp {
	repeated ModInfo modList = 1;
}
// 模块开放奖励
message MokOpenRewardReq {
	int32 modId = 1;
}
message MokOpenRewardResp {
	int32 modId = 1;
	repeated ItemInfo rewards = 2;
}
